[package]
name = "retryable-result"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
http = "1.1.0"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["macros","rt","rt-multi-thread"] }
